# zeditor

./: .actrc  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  Cross.toml  Makefile  README.md  SHADERS.md  build.sh  idea.md  test.sh
.github/workflows/: ci.yml  release.yml
plans/: egui-video.md
src/: channel_surfer.rs  controls.rs  main.rs  shader.rs  ui.rs
