[package]
name = "zeditor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui-video = { version = "0.9", default-features = false }
ffmpeg-sidecar = "2.0"
image = "0.24"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde_json = "1.0"
tempfile = "3.0"
raw-window-handle = "0.6"

# Note: egui-video requires ffmpeg 6 or 7 libraries installed
# On macOS: brew install ffmpeg@7
# Then build with: PKG_CONFIG_PATH="/opt/homebrew/opt/ffmpeg@7/lib/pkgconfig" cargo build --release